fixed contact link alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -50,11 +50,38 @@ nav a:hover {
   color: #fff;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 0;
+  max-width: 96%;
+  margin: 2% auto;
+}
+
 .flex-container-contact {
   display: flex;
   gap: 1rem;
   list-style-image: initial;
   list-style: none;
   justify-content: space-evenly;
+  align-items: flex-end;
+  height: 100%;
 
+  /* alligns list elements with the bottom */
+  margin: 0;
+  padding: 0;
 }
+
+/* prevent phone number from wrapping */
+.phone-info h4 {
+  min-width: 100px;
+}
+
+.main-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-end;
+  gap: 50px;
+}
+
